scrollbar fix

--- a/react-app/src/components/SignupFormModal/Signup.css
+++ b/react-app/src/components/SignupFormModal/Signup.css
@@ -3,6 +3,23 @@
   width: 800px;
   height: 600px;
   overflow: scroll;
+  overflow-x: hidden;
+}
+
+.signupDiv::-webkit-scrollbar-track {
+  border-radius: 5px;
+  background-color: #f5f5f5;
+}
+
+.signupDiv::-webkit-scrollbar {
+  width: 12px;
+  background-color: #f5f5f5;
+}
+
+.signupDiv::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: #555;
 }
 
 img {
